Upload to correct folders

--- a/src/pages/scorpius.html
+++ b/src/pages/scorpius.html
@@ -118,14 +118,14 @@
 
   <!-- Header SVG with pulsing wrapper -->
   <div class="header-wrapper" aria-hidden="false">
-    <img id="scorpius-header" src="SCORPIUS-Header-COLORED.svg" alt="SCORPIUS">
+    <img id="scorpius-header" src="img/SCORPIUS-Header-COLORED.svg" alt="SCORPIUS">
   </div>
 
   <!-- Subtitle updated -->
   <h2>CanSat team 2025/26</h2>
 
   <!-- Floating stars -->
-  <img src="SCORPIUS-Stars-COLORED.svg" class="scorpion" alt="Scorpius emblem">
+  <img src="img/SCORPIUS-Stars-COLORED.svg" class="scorpion" alt="Scorpius emblem">
 
   <!-- Coming Soon using Playfair Display -->
   <p class="coming">Coming Soon</p>
